manifest_file/dispatch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch
  labels:
    service: dispatch
spec:
  replicas: 1
  selector:
    matchLabels:
      service: dispatch
  template:
    metadata:
      labels:
        service: dispatch
    spec:
      containers:
      - name: dispatch
        image: robotshop/rs-dispatch:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
