manifest_file/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: robotshop-ingress

spec: 
  ingressClassName: azure-application-gateway
  rules: 
    - host: robotshop.techno028.shop
      http: 
        paths:
         -  path: /
            pathType: Prefix
            backend: 
              service:
                name: web
                port: 
                  number: 8080
